# neuralNetworkStudy

./: CMakeLists.txt  main.cpp  perceptron.cpp  trainer.cpp
src/: linearfunction.cpp  linearfunction.h  neuralnetwork.cpp  neuralnetwork.h  perceptron.cpp  perceptron.h  random_helper.cpp  random_helper.h  trainer.h
